阳明-从 Docker 到 Kubernetes 进阶/01code/补充1-istio/5 CertManager/与 Istio 集成/httpbin-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  gateways:
  - acme-gateway
  hosts:
  - httpbin.192.168.32.100.xip.io
  http:
  - route:
    - destination:
        host: httpbin
        port:
          number: 8000
